# sheep-shure

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  index.html  package.json  prompt  tailwind.config.ts  tsconfig.tsbuildinfo
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/carrier_sync/: anthem.rs  caresource.rs  devoted.rs  humana.rs  medmutual.rs  mod.rs  uhc.rs
src-tauri/src/commands/: auth_commands.rs  carrier_commands.rs  carrier_sync_commands.rs  client_commands.rs  cloud_sync_commands.rs  commission_commands.rs  conversation_commands.rs  convex_commands.rs  enrollment_commands.rs  import_commands.rs  mod.rs  report_commands.rs  settings_commands.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  seed.rs
src-tauri/src/db/migrations/: v001_initial.sql  v002_conversations.sql  v003_carrier_sync.sql  v004_caresource_enrollments.sql  (+6 more)
src-tauri/src/models/: carrier.rs  carrier_sync.rs  client.rs  commission.rs  conversation.rs  enrollment.rs  mod.rs  plan.rs  provider.rs  report.rs
src-tauri/src/repositories/: carrier_repo.rs  client_repo.rs  commission_repo.rs  conversation_repo.rs  enrollment_repo.rs  mod.rs  provider_repo.rs  report_repo.rs
src-tauri/src/services/: auth_service.rs  carrier_sync_service.rs  client_service.rs  commission_service.rs  conversation_service.rs  convex_service.rs  dashboard_service.rs  enrollment_service.rs  import_service.rs  matching.rs  mod.rs  provider_service.rs  report_service.rs
(+88 files in other folders)
