[package]
name = "sheeps"
version = "0.1.0"
description = "Medicare Book of Business Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "sheeps_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
calamine = "0.26"
csv = "1.3"
genpdf = "0.2"
thiserror = "2"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "cookies"] }
async-trait = "0.1"
